fix(@clayui/css): LPD-62665 Cadmin Datepicker time input doesn't resize on small screen

--- a/packages/clay-css/src/scss/cadmin/variables/_date-picker.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_date-picker.scss
@@ -383,8 +383,8 @@ $cadmin-date-picker-input-group-text: map-deep-merge(
 	$cadmin-date-picker-input-group-text
 );
 
-$date-picker-input-form-control: () !default;
-$date-picker-input-form-control: map-deep-merge(
+$cadmin-date-picker-input-form-control: () !default;
+$cadmin-date-picker-input-form-control: map-deep-merge(
 	(
 		media-breakpoint-down: (
 			xs: (
@@ -401,5 +401,5 @@ $date-picker-input-form-control: map-deep-merge(
 			),
 		),
 	),
-	$date-picker-input-form-control
+	$cadmin-date-picker-input-form-control
 );
